// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter button/modal does not render if there are no filters 1`] = `
Array [
  <Breadcrumbs
    categoryId={42}
  />,
  "Title",
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        className="title"
      >
        <div
          className="categoryTitle"
        >
          Name
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          >
            <div
              className="root"
            >
              <button
                className="root_lowPriority"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="content"
                >
                  <span
                    className="mobileText"
                  >
                    <mock-FormattedMessage
                      defaultMessage="Sort"
                      id="productSort.sortButton"
                    />
                  </span>
                  <span
                    className="desktopText"
                  >
                    <span
                      className="sortText"
                    >
                      <mock-FormattedMessage
                        defaultMessage="Sort by"
                        id="productSort.sortByButton"
                      />
                       
                      
                    </span>
                    <span
                      className="root"
                    >
                      <svg
                        className="icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <polyline
                          points="6 9 12 15 18 9"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <SortedByContainer
            currentSort={
              Object {
                "sortAttribute": "",
                "sortDirection": "",
                "sortText": "",
              }
            }
          />
        </div>
        <section
          className="gallery"
        >
          <Gallery
            items={
              Object {
                "id": 1,
              }
            }
          />
        </section>
        <div
          className="pagination"
        >
          <Pagination
            pageControl={Object {}}
          />
        </div>
      </div>
    </div>
  </article>,
]
`;

exports[`filter button/modal renders when there are filters 1`] = `
Array [
  <Breadcrumbs
    categoryId={42}
  />,
  "Title",
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        className="title"
      >
        <div
          className="categoryTitle"
        >
          Name
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      >
        <require('../../components/FilterSidebar')
          filters={
            Array [
              Object {},
            ]
          }
        />
      </div>
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          >
            <FilterModalOpenButton
              filters={
                Array [
                  Object {},
                ]
              }
            />
            <div
              className="root"
            >
              <button
                className="root_lowPriority"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="content"
                >
                  <span
                    className="mobileText"
                  >
                    <mock-FormattedMessage
                      defaultMessage="Sort"
                      id="productSort.sortButton"
                    />
                  </span>
                  <span
                    className="desktopText"
                  >
                    <span
                      className="sortText"
                    >
                      <mock-FormattedMessage
                        defaultMessage="Sort by"
                        id="productSort.sortByButton"
                      />
                       
                      
                    </span>
                    <span
                      className="root"
                    >
                      <svg
                        className="icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <polyline
                          points="6 9 12 15 18 9"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <SortedByContainer
            currentSort={
              Object {
                "sortAttribute": "",
                "sortDirection": "",
                "sortText": "",
              }
            }
          />
        </div>
        <section
          className="gallery"
        >
          <Gallery
            items={
              Object {
                "id": 1,
              }
            }
          />
        </section>
        <div
          className="pagination"
        >
          <Pagination
            pageControl={Object {}}
          />
        </div>
        <require('../../components/FilterModal')
          filters={
            Array [
              Object {},
            ]
          }
        />
      </div>
    </div>
  </article>,
]
`;

exports[`renders empty page 1`] = `
Array [
  <Breadcrumbs
    categoryId={42}
  />,
  "Title",
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        className="title"
      >
        <div
          className="categoryTitle"
        >
          Empty Name
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          />
        </div>
        <NoProductsFound
          categoryId={42}
        />
      </div>
    </div>
  </article>,
]
`;

exports[`renders loading indicator if no data and loading 1`] = `
Array [
  <Breadcrumbs
    categoryId={42}
  />,
  "Title",
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        className="title"
      >
        <div
          className="categoryTitle"
        >
          Name
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          />
        </div>
        <div
          className="global"
        >
          <span
            className="root"
          >
            <svg
              className="icon"
              fill="none"
              height={64}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={64}
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="2"
                y2="6"
              />
              <line
                x1="12"
                x2="12"
                y1="18"
                y2="22"
              />
              <line
                x1="4.93"
                x2="7.76"
                y1="4.93"
                y2="7.76"
              />
              <line
                x1="16.24"
                x2="19.07"
                y1="16.24"
                y2="19.07"
              />
              <line
                x1="2"
                x2="6"
                y1="12"
                y2="12"
              />
              <line
                x1="18"
                x2="22"
                y1="12"
                y2="12"
              />
              <line
                x1="4.93"
                x2="7.76"
                y1="19.07"
                y2="16.24"
              />
              <line
                x1="16.24"
                x2="19.07"
                y1="7.76"
                y2="4.93"
              />
            </svg>
          </span>
          <span
            className="message"
          >
            <mock-FormattedMessage
              defaultMessage="Fetching Data..."
              id="loadingIndicator.message"
            />
          </span>
        </div>
      </div>
    </div>
  </article>,
]
`;

exports[`renders the correct tree 1`] = `
Array [
  <Breadcrumbs
    categoryId={42}
  />,
  "Title",
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        className="title"
      >
        <div
          className="categoryTitle"
        >
          Name
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          >
            <div
              className="root"
            >
              <button
                className="root_lowPriority"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="content"
                >
                  <span
                    className="mobileText"
                  >
                    <mock-FormattedMessage
                      defaultMessage="Sort"
                      id="productSort.sortButton"
                    />
                  </span>
                  <span
                    className="desktopText"
                  >
                    <span
                      className="sortText"
                    >
                      <mock-FormattedMessage
                        defaultMessage="Sort by"
                        id="productSort.sortByButton"
                      />
                       
                      
                    </span>
                    <span
                      className="root"
                    >
                      <svg
                        className="icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <polyline
                          points="6 9 12 15 18 9"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <SortedByContainer
            currentSort={
              Object {
                "sortAttribute": "",
                "sortDirection": "",
                "sortText": "",
              }
            }
          />
        </div>
        <section
          className="gallery"
        >
          <Gallery
            items={
              Object {
                "id": 1,
              }
            }
          />
        </section>
        <div
          className="pagination"
        >
          <Pagination
            pageControl={Object {}}
          />
        </div>
      </div>
    </div>
  </article>,
]
`;

exports[`sort button/container does not render if there are no products 1`] = `
Array [
  <Breadcrumbs
    categoryId={42}
  />,
  "Title",
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        className="title"
      >
        <div
          className="categoryTitle"
        >
          Name
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          />
        </div>
        <NoProductsFound
          categoryId={42}
        />
      </div>
    </div>
  </article>,
]
`;

exports[`sort button/container renders when there are products 1`] = `
Array [
  <Breadcrumbs
    categoryId={42}
  />,
  "Title",
  <article
    className="root"
  >
    <div
      className="categoryHeader"
    >
      <h1
        className="title"
      >
        <div
          className="categoryTitle"
        >
          Name
        </div>
      </h1>
    </div>
    <div
      className="contentWrapper"
    >
      <div
        className="sidebar"
      />
      <div
        className="categoryContent"
      >
        <div
          className="heading"
        >
          <div
            className="categoryInfo"
          />
          <div
            className="headerButtons"
          >
            <div
              className="root"
            >
              <button
                className="root_lowPriority"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="content"
                >
                  <span
                    className="mobileText"
                  >
                    <mock-FormattedMessage
                      defaultMessage="Sort"
                      id="productSort.sortButton"
                    />
                  </span>
                  <span
                    className="desktopText"
                  >
                    <span
                      className="sortText"
                    >
                      <mock-FormattedMessage
                        defaultMessage="Sort by"
                        id="productSort.sortByButton"
                      />
                       
                      
                    </span>
                    <span
                      className="root"
                    >
                      <svg
                        className="icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <polyline
                          points="6 9 12 15 18 9"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <SortedByContainer
            currentSort={
              Object {
                "sortAttribute": "",
                "sortDirection": "",
                "sortText": "",
              }
            }
          />
        </div>
        <section
          className="gallery"
        >
          <Gallery
            items={
              Object {
                "id": 1,
              }
            }
          />
        </section>
        <div
          className="pagination"
        >
          <Pagination
            pageControl={Object {}}
          />
        </div>
      </div>
    </div>
  </article>,
]
`;
